# ansible-role-i3

./: .gitignore  .talismanrc  .travis.yml  Makefile  README.md  dependencies.yml  install.sh  molecule.yml  playbook.retry  playbook.yml  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: install.yml  keepalive.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
docker/: arch.dockerfile
handlers/: main.yml
install/: ansible.cfg  playbook.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  playbook.yml  requirements.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
templates/: config  i3.conf  rofi  xresources
tests/: test_command.py
vars/: Antergos.yml  Archlinux.yml  Debian.yml  RedHat.yml
