[tool.poetry]
name = "nephelaiio.i3"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ansible = "^8.2.0"
netaddr = "^0.8.0"
MarkupSafe = "==2.0.1"
molecule = {extras = ["docker"], version = "^5.1.0"}
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
